--- a/themes/iSoft/theme.css
+++ b/themes/iSoft/theme.css
@@ -139,9 +139,10 @@ del { color:#666; }
 pre { margin: 1.5em 0; white-space: pre; }
 pre,code,tt { font: 1em 'andale mono', 'lucida console', monospace; line-height: 1.5; }
 li ul, li ol { margin: 0; }
-ul, ol { margin: 0 1.5em 1.5em 0; padding-left: 3em; }
+ul, ol { margin: 0 1.5em 1.5em 0; padding-left: 2em; }
 ul { list-style-type: disc; }
 ol { list-style-type: decimal; }
+li.level1 {padding-bottom:0.2em;}
 dl { margin: 0 0 1.5em 0; }
 dl dt { font-weight: bold; }
 dd { margin-left: 1.5em;}
@@ -635,7 +636,7 @@ form #taskdetailsfull {
 table.inline{border-collapse:collapse;}
 table.inline td {border:1px solid #ccc; padding:4px;}
 
-#shortcutlabel { cursor:pointer; }
+#shortcutlabel { cursor:pointer;padding-left:1em;}
 #shortcutclose { cursor:pointer;float:right; }
 #shortcuts {
   display:none;
@@ -648,14 +649,32 @@ table.inline td {border:1px solid #ccc; padding:4px;}
   box-shadow:0 0 400px #000;
   top:50%;
   margin-top:-250px;
-  height:500px;
+  height:520px;
   left:50%;
   width:300px;
   margin-left:-150px;
   box-sizing:border-box;
 }
+#shortcutsmodal {
+  background-color: rgba(0, 0, 0, 0.3);
+  display: none;
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+  cursor:pointer;
+}
 #s_shortcuts {display:none;}
-#s_shortcuts:checked ~ #shortcuts {display: block;}
+#s_shortcuts:checked ~ #shortcuts, #s_shortcuts:checked ~ #shortcutsmodal {display: block;}
+#shortcuts > ul {
+    list-style: outside none none;
+    margin-left: 0;
+    padding-left: 0;
+}
+#shortcuts li{line-height:2em;}
+kbd {background-color: #eee;border: 1px solid #ccc;border-radius: 4px;padding: 2px;}
 
 #taskdetails {
   margin: 10px 0px 10px 0px;
